# data_loader

./: .coverage  .flake8  .gitignore  BlackSquareDrone.py  DJIDrone.py  IMU.py  MANIFEST.in  PLANNING_AGENT_SYNC_REDESIGN.md  PPK_IMPLEMENTATION_COMPLETE.md  QUALITY_IMPROVEMENT_COMPLETE.md  README.md  adc.py  compare_dat_csv.py  compare_gps_csv.py  coverage.xml  datahandler.py  environment.yml  get_payload_data.py  gps.py  gps_comparison_notebook.ipynb  inclinometer.py  litchi.py  loader.ipynb  mkdocs.yml  path_handler.py  pathhandler.py  payload_paths.py  process_data.py  pyproject.toml  pytest.ini  quick_look.py  setup.py  task.md  test.ipynb  test_hdf5_methods.ipynb  tools.py
.github/: copilot-instructions.md
.github/agents/: conductor.agent.md  data-subagent.agent.md  implementation.agent.md  planning.agent.md
.github/workflows/: ci.yml  docs.yml  version-bump.yml
.ipynb_checkpoints/: datahandler-checkpoint.py  get_payload_data-checkpoint.py  pathhandler-checkpoint.py
decoders/: KERNEL_utils.py
docs/: README.md  architecture.md  changelog.md  contributing.md  index.md  installation.md  quickstart.md  testing.md
docs/api/: index.md
docs/api/analysis/: index.md  ppk.md  rtk.md
docs/api/core/: flight.md  synchronizer.md
docs/api/drones/: blacksquare.md  dji.md  index.md  litchi.md
docs/api/loaders/: index.md  path-loader.md  stout-loader.md
docs/api/sensors/: adc.md  camera.md  gps.md  imu.md  inclinometer.md  index.md
docs/api/utilities/: decoders.md  index.md  tools.md
docs/data-formats/: directory-structure.md  index.md
docs/data-formats/files/: binary.md  hdf5.md  index.md  text.md
docs/data-formats/schemas/: adc.md  drone.md  gps.md  imu.md  index.md  ppk.md
docs/development/: adding-analysis.md  adding-sensors.md  architecture.md  code-style.md  contributing.md  index.md  testing.md  versioning.md
docs/getting-started/: first-flight.md  index.md  installation.md  quickstart.md
docs/javascripts/: static_examples.js
docs/stylesheets/: extra.css  static_examples.css
docs/user-guide/: analysis.md  data-export.md  directory-structure.md  dji-drone.md  drones.md  index.md  loading-flights.md  sensors.md  synchronization.md
docs/user-guide/analysis/: ppk-analysis.md
drones/: BlackSquareDrone.py  DJIDrone.py  litchi.py
examples/: README.md  examples.py  gps_comparison_notebook.ipynb  loader.ipynb  pils_examples.ipynb  ppk_analysis_example.py  ppk_stout_analysis.ipynb
pils/: __init__.py  datahandler.py  decoder.py  flight.py  handler.py  loader.py  loader_old.py  pathhandler.py  pils.py  report.py  synchronizer.py  tools.py
pils/analyze/: __init__.py  ppk.py
pils/analyze/ppkdata/: __init__.py  rtklib_runner.py  utils.py
pils/analyze/ppkdata/PPK/: __init__.py  plotter.py  pos_analyzer.py  report.py  stat_analyzer.py
pils/analyze/ppkdata/RINEX/: __init__.py  analyzer.py  plotter.py  report.py
pils/analyze/rtkdata/: __init__.py  analyze_rtk.py  utils.py
pils/analyze/rtkdata/RINEX/: analyzer.py  plotter.py  report.py
pils/analyze/rtkdata/RTKLIB/: __init__.py  pos_analyzer.py  rtklib_plotter.py  rtklib_report.py  stat_analyzer.py
pils/config/: __init__.py  data_sources.py
pils/decoders/: KERNEL_dicts.py  KERNEL_utils.py  __init__.py
pils/drones/: BlackSquareDrone.py  DJIDrone.py  __init__.py  litchi.py
pils/loader/: __init__.py  path.py  stout.py
pils/sensors/: IMU.py  __init__.py  adc.py  camera.py  gps.py  inclinometer.py  kernel.py  sensors.py
pils/utils/: __init__.py  logging_config.py  tools.py
plans/code-quality-improvement/: phase-1-complete.md  phase-2-complete.md  phase-5-complete.md  phase-6-complete.md
plans/comprehensive-code-quality-improvement/: phase-3-complete.md  phase-4-complete.md
quick_look/: adc_quick_look.ipynb  adc_quick_look.py  inclinometer_quick_look.ipynb  inclinometer_quick_look.py
sensors/: IMU.py  adc.py  camera.py  gps.py  inclinometer.py
sensors/.ipynb_checkpoints/: LM76-checkpoint.py  adc-checkpoint.py  gps-checkpoint.py  inclinometer-checkpoint.py
tests/: __init__.py  test_correlation_sync.py  test_decoders_kernel.py  test_drones_blacksquare.py  test_drones_dji.py  test_drones_litchi.py  test_flight.py  test_flight_hdf5.py  test_flight_sync.py  test_hdf5_structure.py  test_path_loader.py  test_ppk_analysis.py  test_sensors_adc.py  test_sensors_camera.py  test_sensors_gps.py  test_sensors_imu.py  test_sensors_inclinometer.py  test_stout_loader.py  test_utils_tools.py
tests/fixtures/: README.md
utils/: __init__.py  process_data.py  quick_look.py
